bringing in resources from CS home"

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
       <title>Tony E. Wong</title>
     </head>
 
+
     <body>
       <section class="fullHeight" id="welcome">
         <div class="text-center vertical-center blockRel">
           <p class="bigText" id="name">Hey! I'm Tony</p>
-          <p class="secondHeadline" id="secondHeadline">I'm an Instructor  at the University of Colorado Boulder.</p>
+          <p class="secondHeadline" id="secondHeadline">I'm an Instructor at the University of Colorado Boulder.</p>
         </div>
       </section>
+
+
       <section id="description">
         <div class="container">
           <div class="row">
@@ -30,6 +33,8 @@
           </div>
         </div>
       </section>
+
+
       <section id="projects" class="paddingTopped">
         <div class="container">
           <span class="mediumText">Projects</span><hr>
@@ -38,16 +43,31 @@
               <div style='position:relative;padding-bottom:100%;width:100%'>
                 <iframe src='todo' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
               </div>
-              <p class="text-center"><a href="https://github.com/jusleg/storyflow" class="normal">TODO</a></p>
+              <p class="text-center"><a href="https://github.com/mussles" class="normal">TODO</a></p>
             </div>
           </div>
         </div>
+
         <div class="container">
           <ul style="list-style:none;padding-left:0;font-size:1.3em;">
           	<li><strong><a href="TODO">TODO</a></strong> - TODO</li>
           </ul>
         </div>
       </section>
+
+
+			<section id="publications" class="paddingTopped">
+				<div class="container">
+					<div class="row">
+            <div class="col-xs-12">
+							<span class="mediumText"><Publications></span><hr>
+							<p><a href="home/publications.html" class="normal">Publications</a></p>
+						</div>
+					</div>
+				</div>
+      </section>
+
+
       <section id="footerSection" class="paddingToppedSmall">
         <div class="text-center paddingBottom">
           <p class="iconFooter">
