--- a/index.html
+++ b/index.html
@@ -56,15 +56,16 @@
       </section>
 
 
+      <section id="publications">
 			<section id="publications" class="paddingTopped">
-				<div class="container">
-					<div class="row">
+        <div class="container">
+          <div class="row">
             <div class="col-xs-12">
-							<span class="mediumText"><Publications></span><hr>
-							<p><a href="home/publications.html" class="normal">Publications</a></p>
-						</div>
-					</div>
-				</div>
+              <span class="mediumText">Publications</span><hr>
+							<p><a href="publications.html" class="normal">Publications</a></p>
+            </div>
+          </div>
+        </div>
       </section>
 
 
