--- a/publications.html
+++ b/publications.html
@@ -1,32 +1,19 @@
+<!DOCTYPE HTML>
 <html>
+    <head>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+      <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="style.css">
+      <script src="https://code.jquery.com/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+      <script src="https://cdn.rawgit.com/jusleg/updateYourYearPLZ/111cb805/updateYourYearPLZ.js"></script>
 
-<style>
-    * {
-      font-family: arial;
-    }
-</style>
+      <title>Tony E. Wong</title>
+    </head>
 
-  <head>
-    <title>tony wong: publications</title>
-  </head>
-  <body bgcolor=white>
-
-<!-- <img src="../pictures/tony02.jpeg" width=200> -->
-<img src="../pictures/full_header_bar.png" width=1000>
-
-<td id="sites-header-title" class="" role="banner"><div class="sites-header-cell-buffer-wrapper"><a href="../index.html"></a><h3><a href="../index.html" dir="ltr"><font face="arial, sans-serif">(home)</font></a></h3></div></td>
-
-<div dir="ltr"><br /></div>
-<div dir="ltr"><hr /></div>
-<div dir="ltr"><br /></div>
-
-    <table border="0" cellpadding="10">
-      <tr>
-        <td>
-          <h2>Publications</h2>
-        </td>
-      </tr>
-    </table>
+		<body>
 
 I try to keep links to PDF copies of each paper available below. If a link is broken or missing, please email me at whatever address is listed in my contact information.</h2>
 
@@ -111,4 +98,20 @@ I try to keep links to PDF copies of each paper available below. If a link is br
 <div dir="ltr"><hr /></div>
 <div dir="ltr"><br /></div>
 
+      <section id="footerSection" class="paddingToppedSmall">
+        <div class="text-center paddingBottom">
+          <p class="iconFooter">
+            <!-- <a href="http://linkedin.com/in/TODO" class="a"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp; -->
+            <a href="mailto:anthony.e.wong@colorado.edu" class="b"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
+            <a href="http://github.com/tonyewong" class="c"><i class="fa fa-github"></i></a>&nbsp;&nbsp;
+            <!-- <a href="http://twitter.com/TODO" class="d"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp; -->
+            <!-- <a href="http://medium.com/@TODO" class="e"><i class="fa fa-medium"></i></a>&nbsp;&nbsp; -->
+            <!-- <a href="https://keybase.io/TODO" class="f"><i class="fa fa-key"></i></a> -->
+          </p>
+        </div>
+        <div class="text-center">
+          <p class="footer">Tony Wong <span id="updateYourYearPLZ"></span></p>
+        </div>
+      </section>
+	</body>
 </html>
