publications formatting style edits

--- a/index.html
+++ b/index.html
@@ -56,12 +56,11 @@
       </section>
 
 
-      <section id="publications">
-			<section id="publications" class="paddingTopped">
+			<section id="otherstuff" class="paddingTopped">
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              <span class="mediumText">Publications</span><hr>
+              <span class="mediumText">Other stuff</span><hr>
 							<p><a href="publications.html" class="normal">Publications</a></p>
             </div>
           </div>
