--- a/publications.html
+++ b/publications.html
@@ -15,30 +15,56 @@
 
 		<body>
 
+			<section id="pubsintro">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12">
 I try to keep links to PDF copies of each paper available below. If a link is broken or missing, please email me at whatever address is listed in my contact information.</h2>
+						</div>
+					</div>
+				</div>
+			</section>
 
-<div><br /></div>
 
-<div><u>In preparation:</u></div>
-
-<blockquote>
+			<section id="prep">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12">
+							<span class="mediumText">In preparation:</span><hr>
+							<blockquote>
 
 <div><div>Extreme value statistics for storm surges, and the implications of uncertainties on coastal defense decision-making. If you are interested, by all means, ask me about it! I am always happy to chat.</div></div>
 <div><br /></div>
 
-</blockquote>
+							</blockquote>
+						</div>
+					</div>
+				</div>
+			</section>
 
-<div><u>In review:</u></div>
 
-<blockquote>
+			<section id="review">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12">
+							<span class="mediumText">In review:</span><hr>
+							<blockquote>
 
-<div><br /></div>
+							<div><br /></div>
 
-</blockquote>
+							</blockquote>
+						</div>
+					</div>
+				</div>
+			</section>
 
-<div><u>Published:</u></div>
 
-<blockquote>
+			<section id="published">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12">
+							<span class="mediumText">Published:</span><hr>
+							<blockquote>
 
 <div><div><b>Wong, T.E.</b>, A. Klufas, V. Srikrishnan, and K. Keller (2018), <u>Neglecting Model Structural Uncertainty Underestimates Upper Tails of Flood Risk</u>, <i>(in press) Environmental Research Letters</i>, DOI: 10.1088/1748-9326/aacb3d. <a href="http://iopscience.iop.org/article/10.1088/1748-9326/aacb3d">Link</a></div></div>
 <div><br /></div>
@@ -91,8 +117,11 @@ I try to keep links to PDF copies of each paper available below. If a link is br
 <div><div><b>Wong, T.E.</b> (advisors: D.C. Noone and W. Kleiber) (2016). <u>The Impact of Stable Water Isotopic Information on Parameter Calibration in a Land Surface Model</u>. PhD Thesis, University of Colorado, Boulder, Colorado, USA, DOI:10.13140/RG.2.2.30181.40162. <a href="https://www.researchgate.net/profile/Tony_Wong19/publication/312116491_The_Impact_of_Stable_Water_Isotopic_Information_on_Parameter_Calibration_in_a_Land_Surface_Model/links/586faeb808ae329d62161457/The-Impact-of-Stable-Water-Isotopic-Information-on-Parameter-Calibration-in-a-Land-Surface-Model.pdf?_sg%5B0%5D=U7_KhcYfltb5E8FY-ObjfA1BafNObu6pfMFEwqXYyuop1trLpy6RtY63Vt8u41C5x36_6nW04zH9jRdesJaz9g.WI4wCBcZzRPMNBFqxxY8xq3UBJwhMZSTEWZBt57KFKXtK1dMYlFSfh_OxyoGOjdwp9PHm0sGsqQFALP8ZOs3Ow&_sg%5B1%5D=AgXkXYpDhZeQ8LeRwJ47lo4Dh3dgNMYLSfClpGDH-kzMoLrQaM-LE6icZvjDKqvGg8MgyyYh08Pbti8IWHcZ82XB-GKob9zrmnFDgF-Ppoj8.WI4wCBcZzRPMNBFqxxY8xq3UBJwhMZSTEWZBt57KFKXtK1dMYlFSfh_OxyoGOjdwp9PHm0sGsqQFALP8ZOs3Ow">Link</a></div></div>
 <div><br /></div>
 
-</blockquote>
-
+							</blockquote>
+						</div>
+					</div>
+				</div>
+			</section>
 
 <div dir="ltr"><br /></div>
 <div dir="ltr"><hr /></div>
