bold-faced name in publciations

--- a/publications.html
+++ b/publications.html
@@ -62,7 +62,7 @@ Nothing at the moment, which is pretty nice.
 						<div class="col-xs-12">
 							<span class="mediumText">Published:</span><hr>
 
-<div><div><b>Wong, T.E.</b>, A. Klufas, V. Srikrishnan, and K. Keller (2018), <u>Neglecting Model Structural Uncertainty Underestimates Upper Tails of Flood Risk</u>, <i>(in press) Environmental Research Letters</i>, DOI: 10.1088/1748-9326/aacb3d. <a href="http://iopscience.iop.org/article/10.1088/1748-9326/aacb3d">Link</a></div></div>
+<div><div><b><span style="font-weight:bold">Wong, T.E.</span>, A. Klufas, V. Srikrishnan, and K. Keller (2018), <u>Neglecting Model Structural Uncertainty Underestimates Upper Tails of Flood Risk</u>, <i>(in press) Environmental Research Letters</i>, DOI: 10.1088/1748-9326/aacb3d. <a href="http://iopscience.iop.org/article/10.1088/1748-9326/aacb3d">Link</a></div></div>
 <div><br /></div>
 
 <div><div>Tabor, C., B. Otto-Bliesner, E. Brady, J. Nusbaumer, J. Zhu, M. Erb, <b>T.E. Wong</b>, Z. Liu, and D. Noone (2018), <u>Interpreting precession driven &#948;18O variability in the South Asian monsoon region</u>, <i>(in press) Journal of Geophysical Research: Atmospheres</i>, DOI: 10.1029/2018JD028424. <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2018JD028424">Link</a></div></div>
