--- a/publications.html
+++ b/publications.html
@@ -10,7 +10,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
       <script src="https://cdn.rawgit.com/jusleg/updateYourYearPLZ/111cb805/updateYourYearPLZ.js"></script>
 
-      <title>Tony E. Wong</title>
+      <title>Tony E. Wong - Publications</title>
     </head>
 
 		<body>
@@ -62,10 +62,10 @@ Nothing at the moment, which is pretty nice.
 						<div class="col-xs-12">
 							<span class="mediumText">Published:</span><hr>
 
-<div><div><b><span class="bf">Wong, T.E.</span>, A. Klufas, V. Srikrishnan, and K. Keller (2018), <u>Neglecting Model Structural Uncertainty Underestimates Upper Tails of Flood Risk</u>, <i>(in press) Environmental Research Letters</i>, DOI: 10.1088/1748-9326/aacb3d. <a href="http://iopscience.iop.org/article/10.1088/1748-9326/aacb3d">Link</a></div></div>
+<div><div><b><span class="bfText">Wong, T.E.</span>, A. Klufas, V. Srikrishnan, and K. Keller (2018), <u>Neglecting Model Structural Uncertainty Underestimates Upper Tails of Flood Risk</u>, <i>(in press) Environmental Research Letters</i>, DOI: 10.1088/1748-9326/aacb3d. <a href="http://iopscience.iop.org/article/10.1088/1748-9326/aacb3d">Link</a></div></div>
 <div><br /></div>
 
-<div><div>Tabor, C., B. Otto-Bliesner, E. Brady, J. Nusbaumer, J. Zhu, M. Erb, <strong>T.E. Wong</strong>, Z. Liu, and D. Noone (2018), <u>Interpreting precession driven &#948;18O variability in the South Asian monsoon region</u>, <i>(in press) Journal of Geophysical Research: Atmospheres</i>, DOI: 10.1029/2018JD028424. <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2018JD028424">Link</a></div></div>
+<div><div>Tabor, C., B. Otto-Bliesner, E. Brady, J. Nusbaumer, J. Zhu, M. Erb, <span style="font-weight:900">T.E. Wong</span>, Z. Liu, and D. Noone (2018), <u>Interpreting precession driven &#948;18O variability in the South Asian monsoon region</u>, <i>(in press) Journal of Geophysical Research: Atmospheres</i>, DOI: 10.1029/2018JD028424. <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2018JD028424">Link</a></div></div>
 <div><br /></div>
 
 <div><div>Zhu, J., L. Zhengyu, E. Brady, B.L. Otto-Bliesner, S.A. Marcott, J. Zhang, X. Wang, J. Nusbaumer, <b>T.E. Wong</b>, A. Jahn, and D. Noone (2017), <u>Investigating the direct meltwater effect in terrestrial oxygen-isotope paleoclimate records using an isotope-enabled Earth system model</u>, <i>Geophysical Research Letters</i>, DOI: 10.1002/2017GL076253. <a href="http://onlinelibrary.wiley.com/doi/10.1002/2017GL076253/abstract">Link</a></div></div>
