--- a/teaching.html
+++ b/teaching.html
@@ -1,32 +1,26 @@
+<!DOCTYPE HTML>
 <html>
+    <head>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+      <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway" />
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="style.css">
+      <script src="https://code.jquery.com/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+      <script src="https://cdn.rawgit.com/jusleg/updateYourYearPLZ/111cb805/updateYourYearPLZ.js"></script>
 
-<style>
-    * {
-      font-family: arial;
-    }
-</style>
+      <title>Tony E. Wong - Teaching</title>
+    </head>
 
-  <head>
-    <title>tony wong: teaching</title>
-  </head>
-  <body bgcolor=white>
+    <body>
 
-<!-- <img src="../pictures/tony02.jpeg" width=200> -->
-<img src="../pictures/full_header_bar.png" width=1000>
+      <section id="teaching" class="paddingTopped">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <span class="mediumText">Teaching</span><hr>
 
-<td class="" role="banner"><div class="sites-header-cell-buffer-wrapper"><a href="../index.html"></a><h3><a href="../index.html" dir="ltr"><font face="arial, sans-serif">(home)</font></a></h3></div></td>
-
-<div dir="ltr"><br /></div>
-<div dir="ltr"><hr /></div>
-<div dir="ltr"><br /></div>
-
-    <table border="0" cellpadding="10">
-      <tr>
-        <td>
-          <h2>Teaching</h2>
-        </td>
-      </tr>
-    </table>
 
 <table style="width:80%" cellpadding="3">
   <tr height="30"> <td><b>Instructor</b>, University of Colorado Boulder</td><td>Introduction to Data Science (CSCI 3022)</td><td>Summer 2018</td> </tr>
@@ -47,9 +41,29 @@
   <tr height="30"> <td><b>Laboratory assistant</b>, Ohio Wesleyan University</td><td>The Astronomical Universe (ASTR 111)</td><td>Spring 2009</td></tr>
 </table>
 
+            </div>
+          </div>
+        </div>
+      </section>
+
 <div dir="ltr"><br /></div>
 <div dir="ltr"><hr /></div>
 <div dir="ltr"><br /></div>
 
+      <section id="footerSection" class="paddingToppedSmall">
+        <div class="text-center paddingBottom">
+          <p class="iconFooter">
+            <!-- <a href="http://linkedin.com/in/TODO" class="a"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp; -->
+            <a href="mailto:anthony.e.wong@colorado.edu" class="b"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
+            <a href="http://github.com/tonyewong" class="c"><i class="fa fa-github"></i></a>&nbsp;&nbsp;
+            <!-- <a href="http://twitter.com/TODO" class="d"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp; -->
+            <!-- <a href="http://medium.com/@TODO" class="e"><i class="fa fa-medium"></i></a>&nbsp;&nbsp; -->
+            <!-- <a href="https://keybase.io/TODO" class="f"><i class="fa fa-key"></i></a> -->
+          </p>
+        </div>
+        <div class="text-center">
+          <p class="footer">Tony Wong <span id="updateYourYearPLZ"></span></p>
+        </div>
+      </section>
   </body>
 </html>
