--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <div class="col-xs-12">
               <span class="mediumText">Other stuff</span><hr>
 							<p><a href="publications.html" class="normal">Publications</a></p>
+							<p><a href="teaching.html" class="normal">Teaching</a></p>
             </div>
           </div>
         </div>
