adding info to index

--- a/index.html
+++ b/index.html
@@ -27,8 +27,34 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              <span class="mediumText">Bio</span><hr>
-                <p>Someday, I hope to fill in my bio here, Tony said forlornly into the ether...</p>
+              <span class="mediumText">About me</span><hr>
+<p>Mathematics is a powerful tool which enables us to answer interesting questions. In my research, I use mathematical and statistical tools to characterize uncertainty in physical models. In the classroom, I aim to draw on these experiences to show students that mathematics and computational science are much more than just a set of prerequisites for their other coursework.</p>
+
+<span class="emphText">Current work</span><hr>
+<p>Instructor, Computer Science</p>
+<p>University of Colorado Boulder</p>
+
+<span class="emphText">Research interests</span><hr>
+<p>Uncertainty in climate model projections, sea level rise in particular, can lead to suboptimal, ineffective, and - at worst - outright dangerous policy decisions. To avoid this, we must use the information we have available make the best possible policy decisions. This requires accounting for not only varying forms of uncertainty in model parameters and projections, but deep uncertainty - uncertainty in the uncertainty in model structure and parameters. Statistical calibration approaches allow us to constrain these models and characterize the uncertainties inherent in both the model and data, and are a critical part of any modeling effort.</p>
+
+<p>In particular, I am interested in future projections of sea-level rise and their impacts on coastal defense decision-making.</p>
+
+<a href="https://www.researchgate.net/profile/Tony_Wong19">ResearchGate</a>
+<a href="https://goo.gl/Hu21nB">Google Scholar</a>
+
+<span class="emphText">Education</span><hr>
+<p>PhD, Applied Mathematics, University of Colorado at Boulder, 2016</p>
+<p>MS, Applied Mathematics, University of Colorado at Boulder, 2012</p>
+<p>BA, Mathematics (hons.) and Astrophysics, Ohio Wesleyan University, 2010</p>
+
+<span class="emphText">Contact information</span><hr>
+<p>Office: ECOT 623</p>
+<p>Email: anthony.e.wong@colorado.edu</p>
+<p>Department of Computer Science</p>
+<p>430 UCB</p>
+<p>University of Colorado Boulder</p>
+<p>Boulder, CO 80309-0430, USA</p>
+
             </div>
           </div>
         </div>
