--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
       <title>Tony E. Wong</title>
     </head>
 
-<img src="./pictures/bao2013.jpg" width=1000>
-
     <body>
       <section class="fullHeight" id="welcome">
         <div class="text-center vertical-center blockRel">
@@ -23,6 +21,7 @@
         </div>
       </section>
 
+			<img src="./pictures/bao2013.jpg" width=1000 alt="bao tower" class="center">
 
       <section id="description">
         <div class="container">
@@ -32,22 +31,14 @@
 <p>Mathematics is a powerful tool which enables us to answer interesting questions. In my research, I use mathematical and statistical tools to characterize uncertainty in physical models. In the classroom, I aim to draw on these experiences to show students that mathematics and computational science are much more than just a set of prerequisites for their other coursework.</p>
 
 							<div>
-<span class="emphText">Current work</span><hr>
-<p>Instructor, Computer Science</p>
-<p>University of Colorado Boulder</p>
-							</div>
-
-							<div>
 <span class="emphText">Research interests</span><hr>
 <p>Uncertainty in climate model projections, sea level rise in particular, can lead to suboptimal, ineffective, and - at worst - outright dangerous policy decisions. To avoid this, we must use the information we have available make the best possible policy decisions. This requires accounting for not only varying forms of uncertainty in model parameters and projections, but deep uncertainty - uncertainty in the uncertainty in model structure and parameters. Statistical calibration approaches allow us to constrain these models and characterize the uncertainties inherent in both the model and data, and are a critical part of any modeling effort.</p>
 
 <p>In particular, I am interested in future projections of sea-level rise and their impacts on coastal defense decision-making.</p>
 							</div>
 
-							<div>
-<a href="https://www.researchgate.net/profile/Tony_Wong19">ResearchGate</a>
-<a href="https://goo.gl/Hu21nB">Google Scholar</a>
-							</div>
+							<div><a href="https://www.researchgate.net/profile/Tony_Wong19">ResearchGate</a></div>
+							<div><a href="https://goo.gl/Hu21nB">Google Scholar</a></div>
 
 							<div>
 <span class="emphText">Education</span><hr>
@@ -56,7 +47,7 @@
 <p>BA, Mathematics (hons.) and Astrophysics, Ohio Wesleyan University, 2010</p>
 							</div>
 
-							<div>
+							<div><br></div>/
 <span class="emphText">Contact information</span><hr>
 <p>Office: ECOT 623</p>
 <p>Email: anthony.e.wong@colorado.edu</p>
@@ -100,6 +91,7 @@
               <span class="mediumText">Other stuff</span><hr>
 							<p><a href="publications.html" class="normal">Publications</a></p>
 							<p><a href="teaching.html" class="normal">Teaching</a></p>
+							<p><a href="https://drive.google.com/open?id=0BzfIQ3K44Vk4YzdpNnE0WFk1b3c" class="normal">Reasonably current CV"</a></p>
             </div>
           </div>
         </div>
