adding tony picture and reformatting

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <body>
       <section class="fullHeight" id="welcome">
         <div class="text-center vertical-center blockRel">
+					<p><img src="./pictures/tony03.jpeg" width=350 alt="tony" class="center"></p>
           <p class="bigText" id="name">Hey! I'm Tony</p>
           <p class="secondHeadline" id="secondHeadline">I'm an Instructor at the University of Colorado Boulder.</p>
         </div>
@@ -26,40 +27,23 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-							<img src="./pictures/bao2013.jpg" width=1000 alt="bao tower" class="center">
+							<div>
+								<img src="./pictures/bao2013.jpg" width=1000 alt="bao tower" class="center">
+							</div>
               <span class="mediumText">About me</span><hr>
 <p>Mathematics is a powerful tool which enables us to answer interesting questions. In my research, I use mathematical and statistical tools to characterize uncertainty in physical models. In the classroom, I aim to draw on these experiences to show students that mathematics and computational science are much more than just a set of prerequisites for their other coursework.</p>
 
 							<div>
 							<section class="paddingTopped">
 							<span class="emphText">Research interests</span><hr>
-							<div>Uncertainty in climate model projections, sea level rise in particular, can lead to suboptimal, ineffective, and - at worst - outright dangerous policy decisions. To avoid this, we must use the information we have available make the best possible policy decisions. This requires accounting for not only varying forms of uncertainty in model parameters and projections, but deep uncertainty - uncertainty in the uncertainty in model structure and parameters. Statistical calibration approaches allow us to constrain these models and characterize the uncertainties inherent in both the model and data, and are a critical part of any modeling effort.</div>
+							<p>Uncertainty in climate model projections, sea level rise in particular, can lead to suboptimal, ineffective, and - at worst - outright dangerous policy decisions. To avoid this, we must use the information we have available make the best possible policy decisions. This requires accounting for not only varying forms of uncertainty in model parameters and projections, but deep uncertainty - uncertainty in the uncertainty in model structure and parameters. Statistical calibration approaches allow us to constrain these models and characterize the uncertainties inherent in both the model and data, and are a critical part of any modeling effort.</p>
 
-<div>In particular, I am interested in future projections of sea-level rise and their impacts on coastal defense decision-making.</div>
+<p>In particular, I am interested in future projections of sea-level rise and their impacts on coastal defense decision-making. This includes examining statistical model calibration techniques and extreme value statistical models.</p>
 							</div>
 
 							<div>
-							<div><a href="https://www.researchgate.net/profile/Tony_Wong19">ResearchGate</a></div>
-							<div><a href="https://goo.gl/Hu21nB">Google Scholar</a></div>
-							</div>
-
-							<div>
-							<section class="paddingTopped">
-							<span class="emphText">Education</span><hr>
-							<div>PhD, Applied Mathematics, University of Colorado at Boulder, 2016</div>
-							<div>MS, Applied Mathematics, University of Colorado at Boulder, 2012</div>
-							<div>BA, Mathematics (hons.) and Astrophysics, Ohio Wesleyan University, 2010</div>
-							</div>
-
-							<div>
-							<section class="paddingTopped">
-							<span class="emphText">Contact information</span><hr>
-							<div>Office: ECOT 623</div>
-							<div>Email: anthony.e.wong@colorado.edu</div>
-							<div>Department of Computer Science</div>
-							<div>430 UCB</div>
-							<div>University of Colorado Boulder</div>
-							<div>Boulder, CO 80309-0430, USA</div>
+							<p><a href="https://www.researchgate.net/profile/Tony_Wong19">ResearchGate</a></p>
+							<p><a href="https://goo.gl/Hu21nB">Google Scholar</a></p>
 							</div>
             </div>
           </div>
@@ -96,6 +80,26 @@
 							<p><a href="publications.html" class="normal">Publications</a></p>
 							<p><a href="teaching.html" class="normal">Teaching</a></p>
 							<p><a href="https://drive.google.com/open?id=0BzfIQ3K44Vk4YzdpNnE0WFk1b3c" class="normal">Reasonably current CV</a></p>
+
+							<div>
+							<section class="paddingTopped">
+							<span class="emphText">Education</span><hr>
+							<div>PhD, Applied Mathematics, University of Colorado at Boulder, 2016</div>
+							<div>MS, Applied Mathematics, University of Colorado at Boulder, 2012</div>
+							<div>BA, Mathematics (hons.) and Astrophysics, Ohio Wesleyan University, 2010</div>
+							</div>
+
+							<div>
+							<section class="paddingTopped">
+							<span class="emphText">Contact information</span><hr>
+							<div>Office: ECOT 623</div>
+							<div>Email: anthony.e.wong@colorado.edu</div>
+							<div>Department of Computer Science</div>
+							<div>430 UCB</div>
+							<div>University of Colorado Boulder</div>
+							<div>Boulder, CO 80309-0430, USA</div>
+
+							</div>
             </div>
           </div>
         </div>
