--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-							<div>
+							<div class="centered">
 								<img src="./pictures/bao2013.jpg" width=1000 alt="bao tower" class="center">
 							</div>
               <span class="mediumText">About me</span><hr>
