--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 							<div class="centered">
 								<img src="./pictures/bao2013.jpg" width=1000 alt="bao tower" class="center">
 							</div>
+							<div><br></div>
               <span class="mediumText">About me</span><hr>
 <p>Mathematics is a powerful tool which enables us to answer interesting questions. In my research, I use mathematical and statistical tools to characterize uncertainty in physical models. In the classroom, I aim to draw on these experiences to show students that mathematics and computational science are much more than just a set of prerequisites for their other coursework.</p>
 
@@ -55,20 +56,30 @@
         <div class="container">
           <span class="mediumText">Projects</span><hr>
           <div class="row">
+
             <div class="col-sm-4 col-md-4 paddingBottom">
               <div style='position:relative;padding-bottom:100%;width:100%'>
-                <iframe src='todo' frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
+                <iframe src="https://github.com/mussles" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
               </div>
-              <p class="text-center"><a href="https://github.com/mussles" class="normal">TODO</a></p>
+              <p class="text-center"><a href="https://github.com/mussles" class="normal">MUSSLES</a>: Modeling and Uncertainty in Storm and Sea LEvelS</p>
             </div>
+
+            <div class="col-sm-4 col-md-4 paddingBottom">
+              <div style='position:relative;padding-bottom:100%;width:100%'>
+                <iframe src="https://github.com/scrim-network/BRICK" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
+              </div>
+              <p class="text-center"><a href="https://github.com/scrim-network/BRICK" class="normal">BRICK</a>: Building blocks for Relevant Ice and Climate Knowledge</p>
+            </div>
+
           </div>
         </div>
 
-        <div class="container">
+<!--        <div class="container">
           <ul style="list-style:none;padding-left:0;font-size:1.3em;">
           	<li><strong><a href="TODO">TODO</a></strong> - TODO</li>
           </ul>
         </div>
+-->
       </section>
 
 
