--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 
             <div class="col-sm-4 col-md-4 paddingBottom">
               <div style='position:relative;padding-bottom:100%;width:100%'>
-                <iframe src="https://github.com/mussles" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
+                <iframe src="https://cdn.pixabay.com/photo/2014/08/15/21/54/mussels-419052_1280.jpg" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
               </div>
               <p class="text-center"><a href="https://github.com/mussles" class="normal">MUSSLES</a>: Modeling and Uncertainty in Storm and Sea LEvelS</p>
             </div>
 
             <div class="col-sm-4 col-md-4 paddingBottom">
               <div style='position:relative;padding-bottom:100%;width:100%'>
-                <iframe src="https://github.com/scrim-network/BRICK" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
+                <iframe src="https://github.com/scrim-network/BRICK/blob/master/brick_logo.png" frameborder='0' scrolling='no' width='100%' height='100%' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
               </div>
               <p class="text-center"><a href="https://github.com/scrim-network/BRICK" class="normal">BRICK</a>: Building blocks for Relevant Ice and Climate Knowledge</p>
             </div>
