images and link colors class normal removed

--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
 
             <div class="col-sm-4 col-md-4 paddingBottom">
               <div style='position:relative;padding-bottom:100%;width:100%'>
-                <iframe src="https://cdn.pixabay.com/photo/2014/08/15/21/54/mussels-419052_1280.jpg" frameborder='0' scrolling='no' width='100px' height='100px' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
+                <iframe src="./pictures/mussels.jpg" frameborder='0' scrolling='no' width='250px' height='250px' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
               </div>
-              <p class="text-center"><a href="https://github.com/mussles" class="normal">MUSSLES: Modeling and Uncertainty in Storm and Sea LEvelS</a></p>
+              <p class="text-center"><a href="https://github.com/mussles">MUSSLES: Modeling and Uncertainty in Storm and Sea LEvelS</a></p>
             </div>
 
             <div class="col-sm-4 col-md-4 paddingBottom">
               <div style='position:relative;padding-bottom:100%;width:100%'>
-                <iframe src="https://github.com/scrim-network/BRICK/blob/master/brick_logo.png" frameborder='0' scrolling='no' width='100px' height='100px' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
+                <iframe src="https://github.com/scrim-network/BRICK/blob/master/brick_logo.png" frameborder='0' scrolling='no' width='250px' height='250px' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
               </div>
-              <p class="text-center"><a href="https://github.com/scrim-network/BRICK" class="normal">BRICK: Building blocks for Relevant Ice and Climate Knowledge</a></p>
+              <p class="text-center"><a href="https://github.com/scrim-network/BRICK">BRICK: Building blocks for Relevant Ice and Climate Knowledge</a></p>
             </div>
 
           </div>
@@ -88,9 +88,9 @@
           <div class="row">
             <div class="col-xs-12">
               <span class="mediumText">Other stuff</span><hr>
-							<p><a href="publications.html" class="normal">Publications</a></p>
-							<p><a href="teaching.html" class="normal">Teaching</a></p>
-							<p><a href="https://drive.google.com/open?id=0BzfIQ3K44Vk4YzdpNnE0WFk1b3c" class="normal">Reasonably current CV</a></p>
+							<p><a href="publications.html">Publications</a></p>
+							<p><a href="teaching.html">Teaching</a></p>
+							<p><a href="https://drive.google.com/open?id=0BzfIQ3K44Vk4YzdpNnE0WFk1b3c">Reasonably current CV</a></p>
 
 							<div>
 							<section class="paddingTopped">
