--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <div class="col-sm-4 col-md-4 paddingBottom">
               <div style='position:relative;padding-bottom:100%;width:100%'>
-                <iframe src="https://github.com/scrim-network/BRICK/blob/master/brick_logo.png" frameborder='0' scrolling='no' width='250px' height='250px' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
+                <iframe src="./pictures/brick_logo.png" frameborder='0' scrolling='no' width='250px' height='250px' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
               </div>
               <p class="text-center"><a href="https://github.com/scrim-network/BRICK">BRICK: Building blocks for Relevant Ice and Climate Knowledge</a></p>
             </div>
