--- a/index.html
+++ b/index.html
@@ -58,11 +58,25 @@
           <div class="row">
 
             <div class="col-sm-4 col-md-4 paddingBottom">
-              <div style='position:relative;padding-bottom:100%;width:100%'>
+
+<div style="position:relative; width:100%; height:0px; padding-bottom:56.25%;">
+    <iframe style="position:absolute; left:0; top:0; width:100%; height:100%"
+        src="http://www.youtube.com/embed/RksyMaJiD8Y">
+    </iframe>
+</div>
+
+              <div style='position:relative;padding-bottom:56.25%;width:100%;height:0px'>
+                <iframe src="./pictures/mussels.jpg" frameborder='0' scrolling='no' style='position:absolute;top:0;left:0 width:100%; height:100%;' allowfullscreen></iframe>
+              </div>
+              <p class="text-center"><a href="https://github.com/mussles">MUSSLES: Modeling and Uncertainty in Storm and Sea LEvelS</a></p>
+            </div>
+
+<!--              <div style='position:relative;padding-bottom:100%;width:100%'>
                 <iframe src="./pictures/mussels.jpg" frameborder='0' scrolling='no' width='250px' height='250px' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
               </div>
               <p class="text-center"><a href="https://github.com/mussles">MUSSLES: Modeling and Uncertainty in Storm and Sea LEvelS</a></p>
             </div>
+-->
 
             <div class="col-sm-4 col-md-4 paddingBottom">
               <div style='position:relative;padding-bottom:100%;width:100%'>
