--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
           <div class="row">
 
             <div class="col-sm-4 col-md-4 paddingBottom">
-
-              <div style='position:relative;padding-bottom:56.25%;width:100%;height:0px'>
-                <iframe src="./pictures/mussels.jpg" frameborder='0' scrolling='no' style='position:absolute;top:0;left:0 width:100%; height:100%;' allowfullscreen></iframe>
+              <div style='position:relative;padding-bottom:100%;width:100%'>
+                <iframe src="./pictures/mussels.jpg" frameborder='0' scrolling='no' style='position:absolute;top:0;left:0; width:100%; height:100%;' allowfullscreen></iframe>
               </div>
               <p class="text-center"><a href="https://github.com/mussles">MUSSLES: Modeling and Uncertainty in Storm and Sea LEvelS</a></p>
             </div>
@@ -74,7 +73,7 @@
 
             <div class="col-sm-4 col-md-4 paddingBottom">
               <div style='position:relative;padding-bottom:100%;width:100%'>
-                <iframe src="./pictures/brick_logo.png" frameborder='0' scrolling='no' width='250px' height='250px' style='position:absolute;top:0;left:0;' allowfullscreen></iframe>
+                <iframe src="./pictures/brick_logo.png" frameborder='0' scrolling='no' style='position:absolute;top:0;left:0; width:100%; height:100%;' allowfullscreen></iframe>
               </div>
               <p class="text-center"><a href="https://github.com/scrim-network/BRICK">BRICK: Building blocks for Relevant Ice and Climate Knowledge</a></p>
             </div>
