--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
       <script src="https://cdn.rawgit.com/jusleg/updateYourYearPLZ/111cb805/updateYourYearPLZ.js"></script>
 
-      <title>Tony E. Wong</title>
+      <title>Tony Wong</title>
     </head>
 
     <body>
