--- a/publications.html
+++ b/publications.html
@@ -19,7 +19,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
-I try to keep links to PDF copies of each paper available below. If a link is broken or missing, please email me at whatever address is listed in my contact information.</h2>
+						<span class="mediumText">Publications</span><hr>
+<p>I try to keep links to PDF copies of each paper available below. If a link is broken or missing, please email me at whatever address is listed in my contact information.</p>
 						</div>
 					</div>
 				</div>
@@ -30,7 +31,7 @@ I try to keep links to PDF copies of each paper available below. If a link is br
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
-							<span class="mediumText">In preparation:</span><hr>
+							<span class="emphText">In preparation:</span><hr>
 
 <div><div>Extreme value statistics for storm surges, and the implications of uncertainties on coastal defense decision-making. If you are interested, by all means, ask me about it! I am always happy to chat.</div></div>
 <div><br /></div>
@@ -45,7 +46,7 @@ I try to keep links to PDF copies of each paper available below. If a link is br
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
-							<span class="mediumText">In review:</span><hr>
+							<span class="emphText">In review:</span><hr>
 
 Nothing at the moment, which is pretty nice.
 							<div><br /></div>
@@ -60,7 +61,7 @@ Nothing at the moment, which is pretty nice.
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
-							<span class="mediumText">Published:</span><hr>
+							<span class="emphText">Published:</span><hr>
 
 <div><div><b>Wong, T.E.</b>, A. Klufas, V. Srikrishnan, and K. Keller (2018), <u>Neglecting Model Structural Uncertainty Underestimates Upper Tails of Flood Risk</u>, <i>Environmental Research Letters</i>, DOI: 10.1088/1748-9326/aacb3d. <a href="http://iopscience.iop.org/article/10.1088/1748-9326/aacb3d">Link</a></div></div>
 <div><br /></div>
