--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<section class="paddingTopped">
 							<span class="emphText">Contact information</span><hr>
 							<div>Office: ECOT 623</div>
-							<div>Email: anthony.e.wong@colorado.edu</div>
+							<div>Email: anthony.e.wong[at]colorado.edu</div>
 							<div>Department of Computer Science</div>
 							<div>430 UCB</div>
 							<div>University of Colorado Boulder</div>
