--- a/publications.html
+++ b/publications.html
@@ -66,7 +66,7 @@ Nothing at the moment, which is pretty nice.
 <div><div><b>Wong, T.E.</b>, A. Klufas, V. Srikrishnan, and K. Keller (2018), <u>Neglecting Model Structural Uncertainty Underestimates Upper Tails of Flood Risk</u>, <i>Environmental Research Letters</i>, DOI: 10.1088/1748-9326/aacb3d. <a href="http://iopscience.iop.org/article/10.1088/1748-9326/aacb3d">Link</a></div></div>
 <div><br /></div>
 
-<div><div>Tabor, C., B. Otto-Bliesner, E. Brady, J. Nusbaumer, J. Zhu, M. Erb, <u>T.E. Wong</u>, Z. Liu, and D. Noone (2018), <u>Interpreting precession driven &#948;18O variability in the South Asian monsoon region</u>, <i>Journal of Geophysical Research: Atmospheres</i>, DOI: 10.1029/2018JD028424. <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2018JD028424">Link</a></div></div>
+<div><div>Tabor, C., B. Otto-Bliesner, E. Brady, J. Nusbaumer, J. Zhu, M. Erb, <b>T.E. Wong</b>, Z. Liu, and D. Noone (2018), <u>Interpreting precession driven &#948;18O variability in the South Asian monsoon region</u>, <i>Journal of Geophysical Research: Atmospheres</i>, DOI: 10.1029/2018JD028424. <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2018JD028424">Link</a></div></div>
 <div><br /></div>
 
 <div><div>Zhu, J., L. Zhengyu, E. Brady, B.L. Otto-Bliesner, S.A. Marcott, J. Zhang, X. Wang, J. Nusbaumer, <b>T.E. Wong</b>, A. Jahn, and D. Noone (2017), <u>Investigating the direct meltwater effect in terrestrial oxygen-isotope paleoclimate records using an isotope-enabled Earth system model</u>, <i>Geophysical Research Letters</i>, DOI: 10.1002/2017GL076253. <a href="http://onlinelibrary.wiley.com/doi/10.1002/2017GL076253/abstract">Link</a></div></div>
