--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
           <span class="mediumText">Projects</span><hr>
           <div class="row">
 
-            <div class="col-sm-4 col-md-4 paddingBottom">
+            <div class="col-sm-4 col-md-4">
               <!--<div style='position:relative;padding-bottom:100%;width:100%'>-->
-              <div style='position:relative;padding-top:100%;width:100%;text-align:center'>
+              <div style='position:relative;padding-top:100%;width:100%'>
                 <iframe src="./pictures/mussels.jpg" frameborder='0' scrolling='no' style='position:absolute;top:0;left:0; width:100%; height:100%;' allowfullscreen></iframe>
               </div>
               <p class="text-center"><a href="https://github.com/mussles">MUSSLES: Modeling and Uncertainty in Storm and Sea LEvelS</a></p>
             </div>
 
-	    <div class="col-sm-4 col-md-4 paddingBottom">
+	    <div class="col-sm-4 col-md-4">
               <!--<div style='position:relative;padding-bottom:100%;width:100%'>-->
-              <div style='position:relative;padding-top:100%;width:100%;text-align:center'>
+              <div style='position:relative;padding-top:100%;width:100%'>
                 <iframe src="./pictures/brick_logo.png" frameborder='0' scrolling='no' style='position:absolute;top:0;left:0; width:100%; height:100%;' allowfullscreen></iframe>
               </div>
               <p class="text-center"><a href="https://github.com/scrim-network/BRICK">BRICK: Building blocks for Relevant Ice and Climate Knowledge</a></p>
