--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <span class="mediumText">Projects</span><hr>
           <div class="row">
 
-            <div class="col-sm-4 col-md-4">
+            <div class="col-sm-4">
               <!--<div style='position:relative;padding-bottom:100%;width:100%'>-->
               <div style='position:relative;padding-top:100%;width:100%;height:100%'>
                 <iframe src="./pictures/mussels.jpg" frameborder='0' scrolling='no' style='position:absolute;top:0;left:0; width:100%; height:100%;' allowfullscreen></iframe>
@@ -65,7 +65,7 @@
               <p class="text-center"><a href="https://github.com/mussles">MUSSLES: Modeling and Uncertainty in Storm and Sea LEvelS</a></p>
             </div>
 
-	    <div class="col-sm-4 col-md-4">
+	    <div class="col-sm-4">
               <!--<div style='position:relative;padding-bottom:100%;width:100%'>-->
               <div style='position:relative;padding-top:100%;width:100%;height:100%'>
                 <iframe src="./pictures/brick_logo.png" frameborder='0' scrolling='no' style='position:absolute;top:0;left:0; width:100%; height:100%;' allowfullscreen></iframe>
