--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 
             <div class="col-sm-4">
               <!--<div style='position:relative;padding-bottom:100%;width:100%'>-->
-              <div style='position:relative;padding-top:100%;width:100%;height:100%'>
+              <p class="text-center"><!--<div style='position:relative;padding-top:100%;width:100%;height:100%'>-->
                 <iframe src="./pictures/mussels.jpg" frameborder='0' scrolling='no' style='display:block;position:absolute;top:0;left:0; width:100%; height:100%;text-align:center' allowfullscreen></iframe>
-              </div>
-              <p class="text-center"><a href="https://github.com/mussles">MUSSLES: Modeling and Uncertainty in Storm and Sea LEvelS</a></p>
+              <!--</div>-->
+              <a href="https://github.com/mussles">MUSSLES: Modeling and Uncertainty in Storm and Sea LEvelS</a></p>
             </div>
 
 	    <div class="col-sm-4">
